crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_timestamp_regex_renders_rfc3339_text.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(r\"_time=/2026-01-.*/\", &[(\"_time\", CT::Timestamp)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE regexp_matches(strftime("_time", '%Y-%m-%dT%H:%M:%S.%fZ'), ?)
---
params:
  0: '2026-01-.*'
