crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_in_list_binds_text.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status=200,301,404\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "status" IN (?, ?, ?)
---
params:
  0: '200'
  1: '301'
  2: '404'
