crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_in_list_expands_to_or_of_equalities.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status=200,301,404\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (("status" = ? OR COALESCE(TRY_CAST("status" AS DOUBLE) = ?, FALSE)) OR ("status" = ? OR COALESCE(TRY_CAST("status" AS DOUBLE) = ?, FALSE)) OR ("status" = ? OR COALESCE(TRY_CAST("status" AS DOUBLE) = ?, FALSE)))
---
params:
  0: '200'
  1: 200
  2: '301'
  3: 301
  4: '404'
  5: 404
