crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_in_list_without_numbers_keeps_in_shape.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status=accepted,pending\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "status" IN (?, ?)
---
params:
  0: 'accepted'
  1: 'pending'
