crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_ne_numeric_binds_text_keeping_null_policy.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status!=200\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE ("status" != ? OR "status" IS NULL)
---
params:
  0: '200'
