crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_negated_list_composes_scalar_equalities.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"status!=200,301\", &[(\"status\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE (("status" != ? AND COALESCE(TRY_CAST("status" AS DECIMAL(38,6)) != TRY_CAST(? AS DECIMAL(38,6)), TRUE)) OR "status" IS NULL) AND (("status" != ? AND COALESCE(TRY_CAST("status" AS DECIMAL(38,6)) != TRY_CAST(? AS DECIMAL(38,6)), TRUE)) OR "status" IS NULL)
---
params:
  0: '200'
  1: '200'
  2: '301'
  3: '301'
