crates/trawl-core/src/emitter/snapshots/trawl_core__emitter__tests__pinned_varchar_ordered_lexical_unchanged.snap
---
source: crates/trawl-core/src/emitter/mod.rs
expression: "emit_dsl_with_pins(\"host>alpha\", &[(\"host\", CT::Varchar)])"
---
SELECT *
FROM read_parquet('/data/**/*.parquet', union_by_name=true)
WHERE "host" > ?
---
params:
  0: 'alpha'
